--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
 title: check
-#profile_img: assets/img/profile.jpg
-#icon_img: assets/img/icon.webp
+profile_img: assets/img/profile.jpg
+icon_img: assets/img/icon.webp
 
-name: " check"
-#job: "〈MSc Student | WIS〉"
+name: "Cream and Crust"
+job: "Authentic mama's bakery"
 
-#phone_number: 07777777777
-#address: Rehovot, Israel
-#email: faratj.mazal@gmail.com
-#linkedin_username: Mazal Faraj
-#github_username: mazalik
-#instagram_username: mazalfaraj
-#twitter_username: twitter
-#facebook_username: Mazal Faraj
+#phone_number: 0652341526
+address: Jerusalem, Israel
+email: cream.an.crust@gmail.com
+github_username: Creamandcrust.github.io
+#linkedin_username:  chack
+#instagram_username: check
+#twitter_username: check
+#facebook_username: check 
 #youtube_username: youtube
 #blog_url: homepage-url
 
