--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: check
-profile_img: assets/img/profile.jpg
-icon_img: assets/img/icon.webp
+#profile_img: assets/img/profile.jpg
+#icon_img: assets/img/icon.webp
 
 name: "Cream and Crust"
 job: "Authentic mama's bakery"
